# timesheet-gen

./: .env  .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: development.yml  main.yml
src/: cli.rs  client_repositories.rs  config.rs  date_parser.rs  db.rs  file_reader.rs  help_prompt.rs  link_builder.rs  main.rs  repository.rs  testing_helpers.rs  timesheet.rs  timesheet_config.rs  utils.rs
src/data/: client_repositories.rs  mod.rs  repository.rs
src/db/: mod.rs
src/helpers/mocks/: mod.rs
src/interface/: cli.rs  help_prompt.rs  mod.rs
src/utils/: mod.rs
src/utils/date/: date_parser.rs  mod.rs
src/utils/file/: file_reader.rs
src/utils/link/: link_builder.rs  mod.rs
testing-utils/: .autolog.txt  .timesheet-gen.txt  .timesheet.txt
testing-utils/snapshots/: it_generates_timesheet_vec.txt
tests/: cli.rs
