[package]
name = "timesheet-gen"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
clap = "2.33.3"
chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }
regex = "1.5"
dirs = "4.0.0"
dialoguer = "0.8.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
exitcode = "1.1.2"
vec-collections = "0.3.6"
num-traits = "0.2"
mongodb = { version = "2.0.0" }
random-string = "1.0"
futures = "0.3"
tokio = { version = "1.12.0", features = ["full"] }
bson = { version = "2.0.0", features = ["chrono-0_4"] }

[dev-dependencies]
assert_cmd = "2.0.2"
predicates = "2.1.0"
tempfile = "3.2.0"